syntax = "proto3";

package NAlice.NData.NMusic;
option go_package = "a.yandex-team.ru/alice/protos/data/scenario/music";
option java_package = "ru.yandex.alice.protos.data.scenario.music";

import "mapreduce/yt/interface/protos/extension.proto";

message TMusicInfiniteFeedData {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    message TAutoPlaylist {
        string Uid = 1 [json_name = "uid", (NYT.column_name) = "uid"];
        string ImageUrl = 2 [json_name = "image_url", (NYT.column_name) = "image_url"];
        string Title = 3 [json_name = "title", (NYT.column_name) = "title"];
        string Kind = 4 [json_name = "kind", (NYT.column_name) = "kind"];
        string Modified = 5 [json_name = "modified", (NYT.column_name) = "modified"];
    }

    message TPlaylist {
        string Uid = 1 [json_name = "uid", (NYT.column_name) = "uid"];
        string ImageUrl = 2 [json_name = "image_url", (NYT.column_name) = "image_url"];
        string Title = 3 [json_name = "title", (NYT.column_name) = "title"];
        string Kind = 4 [json_name = "kind", (NYT.column_name) = "kind"];
        string Modified = 5 [json_name = "modified", (NYT.column_name) = "modified"];
        uint32 LikesCount = 6 [json_name = "likes_count", (NYT.column_name) = "likes_count"];
    }

    message TArtist {
        string Id = 1 [json_name = "id", (NYT.column_name) = "id"];
        string Name = 2 [json_name = "name", (NYT.column_name) = "name"];
        string ImageUrl = 3 [json_name = "image_url", (NYT.column_name) = "image_url"];
        repeated string Genres = 4 [json_name = "genres", (NYT.column_name) = "genres"];
    }

    message TAlbum {
        string Id = 1 [json_name = "id", (NYT.column_name) = "id"];
        string ImageUrl = 2 [json_name = "image_url", (NYT.column_name) = "image_url"];
        string Title = 3 [json_name = "title", (NYT.column_name) = "title"];
        string ReleaseDate = 4 [json_name = "release_date", (NYT.column_name) = "release_date"];
        uint32 LikesCount = 5 [json_name = "likes_count", (NYT.column_name) = "likes_count"];
        repeated TArtist Artists = 6 [json_name = "artists", (NYT.column_name) = "artists"];
    }

    message TMusicObject {
        oneof Object {
            TAutoPlaylist AutoPlaylist = 1 [json_name = "auto_playlist", (NYT.column_name) = "auto_playlist"];
            TPlaylist Playlist = 2 [json_name = "playlist", (NYT.column_name) = "playlist"];
            TArtist Artist = 3 [json_name = "artist", (NYT.column_name) = "artist"];
            TAlbum Album = 4 [json_name = "album", (NYT.column_name) = "album"];
        };
    }

    message TMusicObjectsBlock {
        string Title = 1 [json_name = "title", (NYT.column_name) = "title"];
        string Type = 2 [json_name = "type", (NYT.column_name) = "type"];
        repeated TMusicObject MusicObjects = 3 [json_name = "music_objects", (NYT.column_name) = "music_objects"];
    }

    repeated TMusicObjectsBlock MusicObjectsBlocks = 1 [json_name = "music_objects_blocks", (NYT.column_name) = "music_objects_blocks"];
}
