syntax = "proto3";

package NAlice.NTv;

option go_package = "a.yandex-team.ru/alice/protos/data/tv/tags";
option java_package = "ru.yandex.alice.protos.data.tv.tags";
option java_outer_classname = "CatalogTag";

import "mapreduce/yt/interface/protos/extension.proto";

message TCatalogTag {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    string Name = 1 [json_name = "name", (NYT.column_name) = "name"];
    string Id = 2 [json_name = "id", (NYT.column_name) = "id"];
    uint32 Priority = 3 [json_name = "priority", (NYT.column_name) = "priority"];
    ETagType TagType = 4 [json_name = "tag_type", (NYT.column_name) = "tag_type"];

    enum ETagType {
        TT_UNKNOWN = 0;
        TT_CONTENT_TYPE = 1;
        TT_GENRE = 2;
        TT_COUNTRY = 3;
        TT_YEAR = 4;
        TT_AGE_RATING = 5;
        TT_QUALITY = 6;
        TT_SORT_ORDER = 7;
    }
}

message TCatalogTags {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    repeated TCatalogTag CatalogTagValue = 1 [json_name = "catalog_tag_value", (NYT.column_name) = "catalog_tag_value"];
}

message TGetTagsRequest {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    repeated TCatalogTag SelectedTags = 1 [json_name = "selected_tags", (NYT.column_name) = "selected_tags"];
}

message TGetTagsResponse {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    repeated TCatalogTag SelectedTags = 1 [json_name = "selected_tags", (NYT.column_name) = "selected_tags"];
    repeated TCatalogTag AvailableTags = 2 [json_name = "available_tags", (NYT.column_name) = "available_tags"];
}
